--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@grpc/proto-loader": "^0.7.6",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-cache": "^5.1.2"
   }
 }
